sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value a
a
^AlgBubbleSort1:5: error: not found: value j
	if (plusPetit(i:Int, j:Int):Boolean){
                             ^AlgBubbleSort1:6: error: not found: value j
	return echange(i:Int, j:Int)
                              ^