sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
a
for (i<-0 to -1){
	if (plusPetit(i:Int, j:Int):Boolean){
	return echange(i:Int, j:Int)
}
}
}

